Update `airflow db` test command

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -56,7 +56,8 @@ outputs:
       commands:
         - pip check
         - airflow --help
-        - airflow db init
+        - airflow db --help
+        - airflow db check
       imports:
         - airflow
 
