--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -2232,119 +2232,121 @@ outputs:
         - python {{ python_min }}
         - pip
 
-  - name: {{ name }}-with-all
-    build:
-      noarch: python
-    requirements:
-      host:
-        - python {{ python_min }}
-      run:
-        - python >={{ python_min }},<{{ python_over }}
-        - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
-        - apache-airflow-core-with-all
-        - apache-airflow-providers-airbyte >=5.0.0
-        - apache-airflow-providers-alibaba >=3.0.0
-        - apache-airflow-providers-amazon >=9.0.0
-        - apache-airflow-providers-apache-beam >=5.8.1
-        - apache-airflow-providers-apache-cassandra >=3.7.0
-        - apache-airflow-providers-apache-drill >=2.8.1
-        - apache-airflow-providers-apache-druid >=3.12.0
-        - apache-airflow-providers-apache-flink >=1.6.0
-        - apache-airflow-providers-apache-hdfs >=4.6.0
-        - apache-airflow-providers-apache-hive >=8.2.1
-        - apache-airflow-providers-apache-iceberg >=1.2.0
-        - apache-airflow-providers-apache-impala >=1.5.2
-        - apache-airflow-providers-apache-kafka >=1.6.1
-        - apache-airflow-providers-apache-kylin >=3.8.0
-        - apache-airflow-providers-apache-livy >=3.9.2
-        - apache-airflow-providers-apache-pig >=4.6.0
-        - apache-airflow-providers-apache-pinot >=4.5.1
-        - apache-airflow-providers-apache-spark >=4.11.1
-        - apache-airflow-providers-apprise >=1.4.1
-        - apache-airflow-providers-arangodb >=2.7.0
-        - apache-airflow-providers-asana >=2.7.0
-        - apache-airflow-providers-atlassian-jira >=2.7.1
-        - apache-airflow-providers-celery >=3.8.3
-        - apache-airflow-providers-cloudant >=4.0.1
-        - apache-airflow-providers-cncf-kubernetes >=9.0.0
-        - apache-airflow-providers-cohere >=1.4.0
-        - apache-airflow-providers-common-compat >=1.2.1
-        - apache-airflow-providers-common-io >=1.4.2
-        - apache-airflow-providers-common-messaging >=1.0.0
-        - apache-airflow-providers-common-sql >=1.18.0
-        - apache-airflow-providers-databricks >=6.11.0
-        - apache-airflow-providers-datadog >=3.8.0
-        - apache-airflow-providers-dbt-cloud >=3.11.0
-        - apache-airflow-providers-dingding >=3.7.0
-        - apache-airflow-providers-discord >=3.9.0
-        - apache-airflow-providers-docker >=3.14.1
-        - apache-airflow-providers-edge3
-        - apache-airflow-providers-elasticsearch >=5.5.2
-        - apache-airflow-providers-exasol >=4.6.1
-        - apache-airflow-providers-fab >=2.0.0
-        - apache-airflow-providers-facebook >=3.7.0
-        - apache-airflow-providers-ftp >=3.12.0
-        - apache-airflow-providers-git >=0.0.1
-        - apache-airflow-providers-github >=2.8.0
-        - apache-airflow-providers-google >=10.24.0
-        - apache-airflow-providers-grpc >=3.7.0
-        - apache-airflow-providers-hashicorp >=4.0.0
-        - apache-airflow-providers-http >=4.13.2
-        - apache-airflow-providers-imap >=3.8.0
-        - apache-airflow-providers-influxdb >=2.8.0
-        - apache-airflow-providers-jdbc >=4.5.2
-        - apache-airflow-providers-jenkins >=3.7.2
-        - apache-airflow-providers-microsoft-azure >=10.5.1
-        - apache-airflow-providers-microsoft-mssql >=3.9.2
-        - apache-airflow-providers-microsoft-psrp >=3.0.0
-        - apache-airflow-providers-microsoft-winrm >=3.6.1
-        - apache-airflow-providers-mongo >=4.2.2
-        - apache-airflow-providers-mysql >=5.7.2
-        - apache-airflow-providers-neo4j >=3.8.0
-        - apache-airflow-providers-odbc >=4.8.0
-        - apache-airflow-providers-openai >=1.5.0
-        - apache-airflow-providers-openfaas >=3.7.0
-        - apache-airflow-providers-openlineage >=2.1.3
-        - apache-airflow-providers-opensearch >=1.5.0
-        - apache-airflow-providers-opsgenie >=5.8.0
-        - apache-airflow-providers-oracle >=3.12.0
-        - apache-airflow-providers-pagerduty >=3.8.1
-        - apache-airflow-providers-papermill >=3.8.2
-        - apache-airflow-providers-pgvector >=1.4.0
-        - apache-airflow-providers-pinecone >=2.1.1
-        - apache-airflow-providers-postgres >=5.13.1
-        - apache-airflow-providers-presto >=5.7.0
-        - apache-airflow-providers-qdrant >=1.3.0
-        - apache-airflow-providers-redis >=4.0.0
-        - apache-airflow-providers-salesforce >=5.9.0
-        - apache-airflow-providers-samba >=4.9.0
-        - apache-airflow-providers-segment >=3.7.0
-        - apache-airflow-providers-sendgrid >=4.0.0
-        - apache-airflow-providers-sftp >=5.0.0
-        - apache-airflow-providers-singularity >=3.7.0
-        - apache-airflow-providers-slack >=8.9.1
-        - apache-airflow-providers-smtp >=1.8.1
-        - apache-airflow-providers-snowflake >=5.8.0
-        - apache-airflow-providers-sqlite >=3.9.1
-        - apache-airflow-providers-ssh >=3.14.0
-        - apache-airflow-providers-standard
-        - apache-airflow-providers-tableau >=5.0.0
-        - apache-airflow-providers-telegram >=4.7.0
-        - apache-airflow-providers-teradata >=2.6.1
-        - apache-airflow-providers-trino >=5.8.1
-        - apache-airflow-providers-vertica >=3.9.1
-        - apache-airflow-providers-weaviate >=3.0.0
-        - apache-airflow-providers-yandex >=4.0.0
-        - apache-airflow-providers-ydb >=1.4.0
-        - apache-airflow-providers-zendesk >=4.9.0
-    test:
-      imports:
-        - airflow
-      commands:
-        - pip check
-      requires:
-        - python {{ python_min }}
-        - pip
+  # This isn't possible to add now because of circular dependencies and missing
+  # providers.  We'll add it later once these issues are resolved.
+  # - name: {{ name }}-with-all
+  #   build:
+  #     noarch: python
+  #   requirements:
+  #     host:
+  #       - python {{ python_min }}
+  #     run:
+  #       - python >={{ python_min }},<{{ python_over }}
+  #       - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
+  #       - apache-airflow-core-with-all
+  #       - apache-airflow-providers-airbyte >=5.0.0
+  #       - apache-airflow-providers-alibaba >=3.0.0
+  #       - apache-airflow-providers-amazon >=9.0.0
+  #       - apache-airflow-providers-apache-beam >=5.8.1
+  #       - apache-airflow-providers-apache-cassandra >=3.7.0
+  #       - apache-airflow-providers-apache-drill >=2.8.1
+  #       - apache-airflow-providers-apache-druid >=3.12.0
+  #       - apache-airflow-providers-apache-flink >=1.6.0
+  #       - apache-airflow-providers-apache-hdfs >=4.6.0
+  #       - apache-airflow-providers-apache-hive >=8.2.1
+  #       - apache-airflow-providers-apache-iceberg >=1.2.0
+  #       - apache-airflow-providers-apache-impala >=1.5.2
+  #       - apache-airflow-providers-apache-kafka >=1.6.1
+  #       - apache-airflow-providers-apache-kylin >=3.8.0
+  #       - apache-airflow-providers-apache-livy >=3.9.2
+  #       - apache-airflow-providers-apache-pig >=4.6.0
+  #       - apache-airflow-providers-apache-pinot >=4.5.1
+  #       - apache-airflow-providers-apache-spark >=4.11.1
+  #       - apache-airflow-providers-apprise >=1.4.1
+  #       - apache-airflow-providers-arangodb >=2.7.0
+  #       - apache-airflow-providers-asana >=2.7.0
+  #       - apache-airflow-providers-atlassian-jira >=2.7.1
+  #       - apache-airflow-providers-celery >=3.8.3
+  #       - apache-airflow-providers-cloudant >=4.0.1
+  #       - apache-airflow-providers-cncf-kubernetes >=9.0.0
+  #       - apache-airflow-providers-cohere >=1.4.0
+  #       - apache-airflow-providers-common-compat >=1.2.1
+  #       - apache-airflow-providers-common-io >=1.4.2
+  #       - apache-airflow-providers-common-messaging >=1.0.0
+  #       - apache-airflow-providers-common-sql >=1.18.0
+  #       - apache-airflow-providers-databricks >=6.11.0
+  #       - apache-airflow-providers-datadog >=3.8.0
+  #       - apache-airflow-providers-dbt-cloud >=3.11.0
+  #       - apache-airflow-providers-dingding >=3.7.0
+  #       - apache-airflow-providers-discord >=3.9.0
+  #       - apache-airflow-providers-docker >=3.14.1
+  #       - apache-airflow-providers-edge3
+  #       - apache-airflow-providers-elasticsearch >=5.5.2
+  #       - apache-airflow-providers-exasol >=4.6.1
+  #       - apache-airflow-providers-fab >=2.0.0
+  #       - apache-airflow-providers-facebook >=3.7.0
+  #       - apache-airflow-providers-ftp >=3.12.0
+  #       - apache-airflow-providers-git >=0.0.1
+  #       - apache-airflow-providers-github >=2.8.0
+  #       - apache-airflow-providers-google >=10.24.0
+  #       - apache-airflow-providers-grpc >=3.7.0
+  #       - apache-airflow-providers-hashicorp >=4.0.0
+  #       - apache-airflow-providers-http >=4.13.2
+  #       - apache-airflow-providers-imap >=3.8.0
+  #       - apache-airflow-providers-influxdb >=2.8.0
+  #       - apache-airflow-providers-jdbc >=4.5.2
+  #       - apache-airflow-providers-jenkins >=3.7.2
+  #       - apache-airflow-providers-microsoft-azure >=10.5.1
+  #       - apache-airflow-providers-microsoft-mssql >=3.9.2
+  #       - apache-airflow-providers-microsoft-psrp >=3.0.0
+  #       - apache-airflow-providers-microsoft-winrm >=3.6.1
+  #       - apache-airflow-providers-mongo >=4.2.2
+  #       - apache-airflow-providers-mysql >=5.7.2
+  #       - apache-airflow-providers-neo4j >=3.8.0
+  #       - apache-airflow-providers-odbc >=4.8.0
+  #       - apache-airflow-providers-openai >=1.5.0
+  #       - apache-airflow-providers-openfaas >=3.7.0
+  #       - apache-airflow-providers-openlineage >=2.1.3
+  #       - apache-airflow-providers-opensearch >=1.5.0
+  #       - apache-airflow-providers-opsgenie >=5.8.0
+  #       - apache-airflow-providers-oracle >=3.12.0
+  #       - apache-airflow-providers-pagerduty >=3.8.1
+  #       - apache-airflow-providers-papermill >=3.8.2
+  #       - apache-airflow-providers-pgvector >=1.4.0
+  #       - apache-airflow-providers-pinecone >=2.1.1
+  #       - apache-airflow-providers-postgres >=5.13.1
+  #       - apache-airflow-providers-presto >=5.7.0
+  #       - apache-airflow-providers-qdrant >=1.3.0
+  #       - apache-airflow-providers-redis >=4.0.0
+  #       - apache-airflow-providers-salesforce >=5.9.0
+  #       - apache-airflow-providers-samba >=4.9.0
+  #       - apache-airflow-providers-segment >=3.7.0
+  #       - apache-airflow-providers-sendgrid >=4.0.0
+  #       - apache-airflow-providers-sftp >=5.0.0
+  #       - apache-airflow-providers-singularity >=3.7.0
+  #       - apache-airflow-providers-slack >=8.9.1
+  #       - apache-airflow-providers-smtp >=1.8.1
+  #       - apache-airflow-providers-snowflake >=5.8.0
+  #       - apache-airflow-providers-sqlite >=3.9.1
+  #       - apache-airflow-providers-ssh >=3.14.0
+  #       - apache-airflow-providers-standard
+  #       - apache-airflow-providers-tableau >=5.0.0
+  #       - apache-airflow-providers-telegram >=4.7.0
+  #       - apache-airflow-providers-teradata >=2.6.1
+  #       - apache-airflow-providers-trino >=5.8.1
+  #       - apache-airflow-providers-vertica >=3.9.1
+  #       - apache-airflow-providers-weaviate >=3.0.0
+  #       - apache-airflow-providers-yandex >=4.0.0
+  #       - apache-airflow-providers-ydb >=1.4.0
+  #       - apache-airflow-providers-zendesk >=4.9.0
+  #   test:
+  #     imports:
+  #       - airflow
+  #     commands:
+  #       - pip check
+  #     requires:
+  #       - python {{ python_min }}
+  #       - pip
 
 about:
   home: http://airflow.apache.org
